syntax = "proto3";
package com.linkedout.proto.models;
import "models/job.proto";
import "models/company.proto";

message JobOffer {
  string id = 1;
  string title = 2;
  string description = 3;
  string startDate = 4;
  string endDate = 5;
  string geographicArea = 6;
  int32 salary = 7;
  Job job = 8;
  Company company = 9;
  int32 status = 10;
}
